.provarCaches/00D410000011HE0EAM/objects/rstk__solineatp__c.object
<CustomObject>
    <description>solineatp__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__solineatp_soline__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__solineatp_invdiv__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__solineatp_icitem__r.rstk__externalid__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__solineatp_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos;  &amp; rstk__solineatp_invdiv__r.rstk__sydiv_div__c &amp; &apos;(&apos; &amp;  rstk__solineatp_soline__r.Name &amp; &apos;)&apos;</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_curratp__c</fullName>
        <inlineHelpText>This is the Current ATP for this Item in this Division</inlineHelpText>
        <label>Current ATP</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory Item associated with this Sales Order line&apos;s ATP</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Sales Order Line ATP by Division</relationshipLabel>
        <relationshipName>icitemsolineatps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_intransit__c</fullName>
        <inlineHelpText>This is the Quantity in Transit of this Item in this Division</inlineHelpText>
        <label>Qty In Transit</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division for this SO Line&apos;s ATP</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order Line ATP by Division</relationshipLabel>
        <relationshipName>invdivsolineatps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Project associated with this Sales Order line&apos;s ATP</inlineHelpText>
        <label>Project Number</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order Line ATP by Division</relationshipLabel>
        <relationshipName>pjprojsolineatps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtyalloc__c</fullName>
        <inlineHelpText>This is the Quantity Allocated of this Item in this Division</inlineHelpText>
        <label>Qty Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtydemands__c</fullName>
        <inlineHelpText>This is the Total Quantity required on other Sales Order Demands for this Item in this Division.</inlineHelpText>
        <label>Demand Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtyoh__c</fullName>
        <inlineHelpText>This is the Quantity On Hand of this Item in this Division</inlineHelpText>
        <label>Qty On Hand</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtyopenpo__c</fullName>
        <inlineHelpText>This is the Quantity on Open POs for  this Item in this Division</inlineHelpText>
        <label>Open PO Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtyper__c</fullName>
        <inlineHelpText>This is the Quantity Per on this Sales Order Line</inlineHelpText>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtyreq__c</fullName>
        <inlineHelpText>This is the Quantity required on this Sales Order Line</inlineHelpText>
        <label>Quantity Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_qtyreqs__c</fullName>
        <inlineHelpText>This is the Quantity on Open Reqs for  this Item in this Division</inlineHelpText>
        <label>Open Req Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solineatp_soline__c</fullName>
        <inlineHelpText>This is the Sales Order Line Number</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Sales Order Line ATP by Division</relationshipLabel>
        <relationshipName>solinesolineatps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Line ATP by Division</label>
    <listViews>
        <fullName>rstk__SO_Line_ATP</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__solineatp_invdiv__c</columns>
        <columns>rstk__solineatp_icitem__c</columns>
        <columns>rstk__solineatp_curratp__c</columns>
        <columns>rstk__solineatp_qtydemands__c</columns>
        <columns>rstk__solineatp_qtyoh__c</columns>
        <columns>rstk__solineatp_qtyalloc__c</columns>
        <columns>rstk__solineatp_qtyper__c</columns>
        <columns>rstk__solineatp_qtyreq__c</columns>
        <columns>rstk__solineatp_qtyopenpo__c</columns>
        <columns>rstk__solineatp_qtyreqs__c</columns>
        <columns>rstk__solineatp_pjproj__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>SO Line ATP</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Line ATP by Division</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>